# aec-interpreter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
config/: config.yaml
data/test_sets/: cases_ap_heldout_e2e.jsonl  leakage_excluded_train_ids.txt
deploy/: README.md  modal_app.py  stage_assets.py  vlm_modal_app.py
docs/: DATA_INVENTORY.md  REPO_MAP.md  REVIEW_TODO.md  ROADMAP.md  STATUS.md  data_audit.md  results_ledger.md
docs/specs/: position_slot_extractor.md
docs/thesis/: 00_intro_abstract.md  references.bib  rq1_spatial_address.md  rq2_calibrated_routing.md  rq3_depth_law.md  why_not_end_to_end.md
eval/: build_3d_demo.py  build_demo.py  build_pipeline_fig.py  calibrate_rerank.py  calibration_diag.py  depth_saturation.py  experiments.yaml  external_baseline.py  extract_neighborhood.py  field_contract.py  fig_address_sample.py  fig_defer_case.py  fig_depth_eval.py  fig_depth_sample.py  fig_graph_reasoning.py  fig_ifc_engine.py  fig_pipeline_shots.py  fig_rationale.py  fig_vlm_finetune.py  fingerprint_ceiling.py  fingerprint_reliability.py  live_freeform.py  live_infer.py  live_rerank.py  live_runner.py  m1b_probe.py  realized_extracted_coarse.py  realized_split.py  reconstruct_position_index.py  rerank_prize.py  run_benchmark.py  slot_detector_cv.py  slot_detector_sensitivity.py  slot_extractor_m1.py  spatial_address_ceiling.py  system_decomposition.py  triage_effort.py  vlm_implementation.py  vlm_profile.py  vlm_reranker_baseline.py  (+3 more)
eval/fixtures/metrics/: g8_posctx_dim.json  gemini_ap_v2.json
eval/fixtures/traces/: g8_posctx_dim.jsonl  gemini_ap_v2.jsonl
paper/: .gitignore  Makefile  README.md  main.tex  main_v3.tex  references.bib
paper/sections/: 00_abstract.tex  01_introduction.tex  02_system_design.tex  03_evaluation.tex  04_discussion.tex  05_conclusion.tex  06_reproducibility_appendix.tex
paper/sections/archive_rq_chapters/: 02_why_not_end_to_end.tex  03_rq1_spatial_address.tex  04_rq2_calibrated_routing.tex  05_rq3_depth_law.tex
prompts/: constraints_extraction.yaml  dimension_anchors.json  graphrag_rerank.yaml  ifc_registry.yaml  size_cluster_taxonomy.json
schemas/: constraint_contract.schema.json
scripts/: render_upper_storeys.py
scripts/graph_build/: 01_export_ifc_to_neo4j.py  02_add_topology_edges.py  03_prepare_views.py  README.md
site/: article.css  demo.html  index.html
site/assets/3d/: 1_first_floor.glb  1_garage.glb  2_second_floor.glb  cases.json  (+5 more)
src/aec_interpreter/: ifc_engine.py  pipeline_base.py
tests/: conftest.py  test_build_demo_live.py  test_build_pipeline_fig.py  test_calibrate_rerank.py  test_calibration_diag.py  test_contract.py  test_depth_saturation.py  test_external_baseline.py  test_field_contract.py  test_fingerprint_ceiling.py  test_fingerprint_reliability.py  test_parity.py  test_rerank_prize.py  test_slot_detector_cv.py  test_slot_extractor_m1.py  test_spatial_address_ceiling.py  test_triage_effort.py  test_vlm_profile.py  test_wall_detector_cv.py  test_wall_extractor_m1.py
(+30 files in other folders)
