[project]
name = "aec-interpreter"
version = "0.1.0"
description = "Neuro-symbolic interpreter middleware: grounds on-site evidence (image + NL) to IFC element GUIDs over a BIM knowledge graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── contract / config / core ──
    "pydantic>=2.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "colorama>=0.4.6",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    # ── IFC graph + Neo4j ──
    "ifcopenshell>=0.7",
    "py2neo>=2021.2",   # Neo4j client used by IFCEngine.export_to_neo4j + graph-build scripts
    # ── VLM extraction + visual specialists ──
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",   # cv2 — OpenCV position/counting specialist (neurosym/floorplan_counter)
    "langchain-core>=0.1.0",  # visual/image_parser VLM message types (TODO: decouple in service/)
    # ── external / baseline model APIs ──
    "google-generativeai==0.8.5",
    "openai==2.8.1",
    # ── eval reporting / plots ──
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "networkx>=3.0",   # local graph rendering in eval/build_demo.py (interface mock)
    "trimesh>=4.0",    # IFC→glTF export for the interactive 3D demo (eval/build_3d_demo.py)
    "sentence-transformers>=2.2",  # external dense-retrieval baseline (eval/external_baseline.py)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
# heavy geometry stack (datagen / point-cloud alignment only)
geom = [
    "open3d>=0.17.0",
]
# live pipeline: Neo4j retrieval (run_benchmark --live) + Modal GPU VLM inference
# (eval/live_infer.py calls the deployed mscd-vlm-lora3-inference app).
live = [
    "py2neo>=2021.2",
    "modal>=1.5",
]
# legacy V1 agent + interactive chat (NOT used by the neuro-symbolic pipeline; kept
# only if the old agent path is run for qualitative comparison)
agent = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "langgraph>=0.1.0",
    "fastmcp>=0.2.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
